<resources>
    <string name="app_name">FoodApp</string>
    <string name="intro_description">В этом приложении можно собрать продуктовую корзину по самым низким ценам</string>
    <string name="intro">Cервис для покупки еды</string>
    <string name="bottom_main_text">Главный</string>
    <string name="bottom_favourite">Избранное</string>
    <string name="exit_dialog_title_text">Выход</string>
    <string name="exit_dialog_message_text">Вы хотите выйти из приложения?</string>
    <string name="exit_dialog_negative_button_text">ОТМЕНА</string>
    <string name="exit_dialog_positive_button_text">ДА</string>

    <!-- String variables -->
    <string name="favouriteTab">FavouriteTab</string>
    <string name="russian_currency">руб.</string>
    <string name="default_notification_channel_id" translatable="false">MainChannel</string>
    <string name="notifications_admin_channel_name">adminChannel</string>
    <string name="notifications_admin_channel_description">main notification channel</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">ВОЙТИ</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Некорректное имя пользователя</string>
    <string name="invalid_password">Пароль должен содержать не более 8 символов</string>
    <string name="login_failed">"Ошибка при авторизации"</string>
    <string name="bottom_profile_text">Профиль</string>
    <string name="profileExit">ВЫХОД</string>
    <string name="profilePickUp">ПУНКТ САМОВЫВОЗА</string>
    <string name="image_upload_error">Ошибка при загрузке изображения</string>
    <string name="banner_upload_error">Ошибка при загрузке баннеров</string>
    <string name="pictureDialogTitle">Выберите действие</string>
    <string name="camera_photo_dialog">Использовать фото с камеры</string>
    <string name="image_upload_successful">Изображение сохранено!</string>
    <string name="image_upload_error_413">Изображение слишком большое</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_toolbar_text">Самовывоз</string>
    <string name="pickup_loading_error">Ошибка при загрузке точек самовывоза</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBqPcHtnIFdnaerEsOQ8Pxa9MfeoRICk8M</string>
    <string name="map_pick_button">ВЫБРАТЬ</string>
    <string name="notification_title">Уведомление</string>
    <string name="notification_message">" Сервис, логгирующий сообщения"</string>
    <string name="permissionExplain">Данное разрешение нужно для того чтобы \</string>
    <string name="permissionExplainLocation">найти ближайшие к вам пункты доставки</string>
    <string name="LocationPermissionTitle">Разрешение на местоположение</string>
    <string name="closestPickupPointInfo1">"Ближайший пункт самовывоза это "</string>
    <string name="closestPickupPointInfo2">". Расстояние до него(в метрах) "</string>
    <string name="logout_success">Успешный выход из учётной записи</string>
    <string name="logout_error">Ошибка при выходе из учётной записи</string>
</resources>
